services/chirpstack-gateway-bridge-basicstation-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: chirpstack-gateway-bridge-basicstation
  name: chirpstack-gateway-bridge-basicstation
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    io.kompose.service: chirpstack-gateway-bridge-basicstation
