services/chirpstack-gateway-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: chirpstack-gateway-bridge
  name: chirpstack-gateway-bridge
spec:
  type: LoadBalancer
  loadBalancerIP: 74.179.219.221
  ports:
    - name: "1700"
      port: 1700
      protocol: UDP
      targetPort: 1700
  selector:
    io.kompose.service: chirpstack-gateway-bridge
