services/node-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: node-red
  name: node-red
spec:
  type: LoadBalancer
  ports:
    - name: "1880"
      port: 1880
      targetPort: 1880
  selector:
    io.kompose.service: node-red
